--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
     "lint:prettier": "yarn lint:check && yarn prettier:check"
+  },
+  "lint-staged": {
+    "src/**/*.ts": "yarn lint:prettier"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +36,7 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "mongoose": "^7.3.0",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
